Updated key journey with content updates in v2

--- a/app/views/v2/provider/api/api-hub-new-key.html
+++ b/app/views/v2/provider/api/api-hub-new-key.html
@@ -37,7 +37,7 @@ Key for API - Apprenticeships - GOV.UK
             </header>
             <div class="app-summary-card--content">
               <p class="govuk-body">
-                Create a vacancy on any website and Find an apprenticeship.<br>
+                Create a vacancy on Find an apprenticeship using your existing systems.<br>
                 Give the API key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
