--- a/app/views/v2/employer/api/api-hub-copied.html
+++ b/app/views/v2/employer/api/api-hub-copied.html
@@ -36,7 +36,7 @@ Key for API - Manage apprenticeships - GOV.UK
             </header>
             <div class="app-summary-card--content">
               <p class="govuk-body">
-                Create an advert on any website and Find an apprenticeship.<br>
+                Create an advert on Find an apprenticeship using your existing systems.<br>
                 Give the API key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">the link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
