--- a/app/views/v3/employer/api/api-list.html
+++ b/app/views/v3/employer/api/api-list.html
@@ -26,7 +26,7 @@ API list - Manage apprenticeships - GOV.UK
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="recruitment-api-live" name="api-name">
             Recruitment API
-            <span class="govuk-caption-m">Create an advert on any website and Find an apprenticeship.</span>
+            <span class="govuk-caption-m">Create an advert on Find an apprenticeship using your existing systems.</span>
           </td>          
           <td class="govuk-table__cell">
             <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
@@ -37,7 +37,7 @@ API list - Manage apprenticeships - GOV.UK
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="recruitment-api-sandbox" name="api-name">
             Recruitment API (Sandbox)
-            <span class="govuk-caption-m">Test creating an advert on any website and Find an apprenticeship.</span>
+            <span class="govuk-caption-m">Test creating an advert on Find an apprenticeship using your existing systems.</span>
           </td>
           <td class="govuk-table__cell">
             <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
