--- a/app/views/v3/employer/api/api.html
+++ b/app/views/v3/employer/api/api.html
@@ -16,7 +16,7 @@ Get started with the recruitment APIs - Manage apprentices
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started with the recruitment APIs</h1>
       <p class="govuk-body">
-        Integrating with our Recruitment API may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
+        Integrating with our Recruitment API may be useful if you want to create adverts using your existing systems. It will allow you to publish to <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
         <br><br>
         The Display adverts API allows you to display adverts from Find an Apprenticeship on any website.
       </p>
@@ -24,7 +24,7 @@ Get started with the recruitment APIs - Manage apprentices
       <p class="govuk-body">
         APIs (Application Programming Interfaces) let applications share information and data with each other.
         <br><br>
-        If you connect using the Recruitment API, you can use your own systems to publish to multiple sites, as well as <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
+        If you connect using the Recruitment API, you can use your own systems to publish to <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
         <br><br>
         You can also use the Display adverts API to display adverts from Find an Apprenticeship on any website.
       </p>
