--- a/app/views/v2/guidance/providers-get-started.html
+++ b/app/views/v2/guidance/providers-get-started.html
@@ -34,26 +34,26 @@ Get started with the recruitment APIs - Recruitment collection - GOV.UK
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds mainstream-guide-content">
-        <!--<h2 class="govuk-heading-m">Overview</h2>-->
+        <!--<h2 class="govuk-heading-m">Overview</h2>
         <p class="govuk-body">
           Integrating with our Recruitment API may be useful if you want to create vacancies using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
           <br><br>
           The Display adverts API allows you to display adverts from Find an Apprenticeship on any website.
-        </p>
+        </p>-->
         <h2 class="govuk-heading-l">What does an API do?</h2> 
         <p class="govuk-body">
-          APIs (Application Programming Interfaces) let applications share information and data with each other. 
+          APIs (Application Programming Interfaces) let applications share information and data with each other.
           <br><br>
-          If you connect using the Recruitment API, you can use your own systems to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
+          If you connect using the Recruitment API, you can use your own systems to publish to <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
           <br><br>
-          You can also use the Display adverts API to display vacancies from Find an Apprenticeship on any website.
+          You can also use the Display adverts API to retrieve vacancies from Find an Apprenticeship and display on your websites.
         </p>
         <h2 class="govuk-heading-l">How do I use the API?</h2> 
         <div class="govuk-inset-text">
-          You'll need someone with technical knowledge to connect your software program with the API, for example a software developer.
+          You'll need someone with technical knowledge to connect your system with the API, for example a software developer.
         </div>
         <p class="govuk-body">
-          You can share the <a href="guidance/get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your software program with the API, they can access the API from there. 
+          You can share the <a href="guidance/get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there. 
         </p>
         <p class="govuk-body">
           It can take a while to connect using an API, so leave enough time to integrate it.
