Added dev to user email to v3

--- a/app/views/v3/_summary.html
+++ b/app/views/v3/_summary.html
@@ -43,8 +43,12 @@
               <li><a href="v3/guidance/creating-an-apprenticeship-advert" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Creating an apprenticeship advert</a></li>    
               <li><a href="v3/guidance/creating-an-apprenticeship-vacancy" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Creating an apprenticeship vacancy</a></li> 
               <li><a href="v3/guidance/employers-get-started" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Get started for employers</a></li>               
-              <li><a href="v3/guidance/providers-get-started" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Get started for providers</a></li>               
+              <li><a href="v3/guidance/providers-get-started" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Get started for providers</a></li>                             
             </ul>
+            <li>Emails</li>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="v3/guidance/dev-to-user-email" class="govuk-link govuk-link--no-visited-state">Developer email</a></li>    
+              <li><a href="v3/guidance/promo-email" class="govuk-link govuk-link--no-visited-state">Promotional email</a></li> 
         </ul>
   </div>
 </div>
