Fixed links in promo email

--- a/app/views/v3/guidance/promo-email.html
+++ b/app/views/v3/guidance/promo-email.html
@@ -19,7 +19,7 @@ GOV.UK Prototype kit
             <ul class="govuk-list govuk-list--bullet">
               <li>join up your organisation’s recruitment system with your Apprenticeship Service account and Find an apprenticeship, the official government website for apprenticeship vacancies in England, with over 8 million searches each month</li>
               <li>create apprenticeship adverts using your recruitment system and link these to your Apprenticeship Service account</li>
-              <li>publish adverts to multiple websites, including your own website and Find an apprenticeship</li>
+              <li>publish adverts to multiple websites, including your own website and <a href="https://www.findapprenticeship.service.gov.uk" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a></li>
             </ul>
           </p>
           <p class="govuk-body">
