--- a/app/views/v3/guidance/promo-email.html
+++ b/app/views/v3/guidance/promo-email.html
@@ -19,17 +19,17 @@ GOV.UK Prototype kit
             <ul class="govuk-list govuk-list--bullet">
               <li>join up your organisation’s recruitment system with your Apprenticeship Service account and Find an apprenticeship, the official government website for apprenticeship vacancies in England, with over 8 million searches each month</li>
               <li>create apprenticeship adverts using your recruitment system and link these to your Apprenticeship Service account</li>
-              <li>publish adverts to multiple websites, including your own website and <a href="https://www.findapprenticeship.service.gov.uk" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a></li>
+              <li>publish adverts to multiple websites, including your own website and <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a></li>
             </ul>
           </p>
           <p class="govuk-body">
             The new tools will refresh advert appearance, enable future updates, enhance security and avoid duplication.            
           </p>
-          <p class="govuk-body" style="text-decoration: underline;">
-            Find out about our APIs
+          <p class="govuk-body">
+            <a href="guidance/employers-get-started" class="govuk-link govuk-link--no-visited-state">Find out about our APIs</a>
           </p>
           <p class="govuk-body">
-            If you choose not to use the new tools, you will still be able to <a href="https://www.youtube.com/watch?v=HSms5I85bUc" class="govuk-link govuk-link--no-visited-state">create adverts using your Apprenticeship Service account</a>.
+            <!--If you choose not to use the new tools, you will still be able to <a href="https://www.youtube.com/watch?v=HSms5I85bUc" class="govuk-link govuk-link--no-visited-state">create adverts using your Apprenticeship Service account</a>.-->
             <br><br>
             Kind regards,
             <br><br>
