Fixed login link

--- a/app/views/v3/guidance/promo-email.html
+++ b/app/views/v3/guidance/promo-email.html
@@ -26,7 +26,7 @@ GOV.UK Prototype kit
             The new tools will refresh advert appearance, enable future updates, enhance security and avoid duplication.            
           </p>
           <p class="govuk-body">
-            <a href="guidance/employers-get-started" class="govuk-link govuk-link--no-visited-state">Find out about our APIs</a>
+            <a href="employers-get-started" class="govuk-link govuk-link--no-visited-state">Find out about our APIs</a>
           </p>
           <p class="govuk-body">
             <!--If you choose not to use the new tools, you will still be able to <a href="https://www.youtube.com/watch?v=HSms5I85bUc" class="govuk-link govuk-link--no-visited-state">create adverts using your Apprenticeship Service account</a>.-->
