--- a/app/views/v3/guidance/providers-get-started.html
+++ b/app/views/v3/guidance/providers-get-started.html
@@ -91,8 +91,9 @@ Get started with the recruitment APIs - Recruitment collection - GOV.UK
       <div class="related-navigation">
         <h2 class="govuk-heading-s">Related content</h2>
         <ul class="govuk-list related-links">
-          <li class="govuk-body-s"><a href="#">List item 1</a></li>
-          <li class="govuk-body-s"><a href="#">List item 2</a></li>          
+          <li class="govuk-body-s"><a href="dev-to-user-email" class="govuk-link govuk-link--no-visited-state">List item 1</a></li>
+          <li class="govuk-body-s"><a href="../employer/login" class="govuk-link govuk-link--no-visited-state">List item 2</a></li>          
+          <li class="govuk-body-s"><a href="../provider/login" class="govuk-link govuk-link--no-visited-state">List item 3</a></li>          
         </ul>
       </div>
     </div>
