Fixed up content and header on Provider API page

--- a/app/views/v3/provider/api/api.html
+++ b/app/views/v3/provider/api/api.html
@@ -1,4 +1,4 @@
-{% extends "ma-layout.html" %}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
 Get started with the recruitment APIs - Manage apprentices
@@ -26,7 +26,7 @@ Get started with the recruitment APIs - Manage apprentices
         <br><br>
         If you connect using the Recruitment API, you can use your own systems to publish to <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
         <br><br>
-        You can also use the Display adverts API to retrieve adverts from Find an Apprenticeship and display on your websites.
+        You can also use the Display adverts API to retrieve vacancies from Find an Apprenticeship and display on your websites.
       </p>
       <h2 class="govuk-heading-l">How do I use the API?</h2> 
       <div class="govuk-inset-text">
