--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -31,8 +31,8 @@
       <div class="govuk-grid-column-two-thirds contents-list">
         
         <span class="govuk-caption-xl gem-c-title__context">Collection</span>
-        <h1 class="govuk-heading-xl">Recruitment</h1>
-        <p class="govuk-body-l">Information for training organisations about using the recruit an apprentice service.</p>
+        <h1 class="govuk-heading-xl">Recruit an apprentice</h1>
+        <p class="govuk-body-l">How to use the Recruit an apprentice service to create, post and manage apprenticeship adverts.</p>
         <!--<nav class="gem-c-contents-list part-navigation-container" aria-label="Pages in this guide" role="navigation" data-module="gem-track-click">
             <h2 class="gem-c-contents-list__title">
               Contents
@@ -83,85 +83,103 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds mainstream-guide-content">
             <!--<h2 class="govuk-heading-m">Overview</h2>-->
-              <p>You need to be registered to vote before you can vote in UK elections or referendums.</p>
-
-              <p> If you’re eligible, you can vote in person on the day of the election at a named polling station. You can also apply for a postal or proxy vote instead.</p>
-
-              <p>Find out about voting safely during coronavirus (COVID-19).</p>
-
-              <h2 class="govuk-heading-m">Ways of voting</h2>
-
-              <p>You can vote:</p>
-
-              <ul class="govuk-list govuk-list--bullet">
-                <li><a href="#">in person at a polling station</a></li>
-                <li><a href="#">by post</a></li>
-                <li>by asking someone else to vote for you (<a href="#">voting by proxy</a>)</li>
+              <p class="govuk-body">
+                Recruit an apprentice is the official government service for posting and managing apprenticeship adverts. Candidates can view and apply for apprenticeships on <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
+              </p>
+              <h2 class="govuk-heading-m">Employers</h2>
+              <p class="govuk-body">
+                Information for employers on how to create and manage apprenticeship adverts, along with guidance on using our recruitment APIs. 
+                <br><br>
+                Our recruitment APIs may be useful if you want to create adverts using your existing systems or display adverts from Find an apprenticeship on your websites.
+              </p>
+              <ul class="gem-c-document-list">
+                <li class="gem-c-document-list__item">
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="creating-an-apprenticeship-advert">Creating an apprenticeship advert</a>
+                  <!--<ul class="gem-c-document-list__item-metadata">
+                    <li class="gem-c-document-list__attribute">
+                      <time>
+                        17 July 2020
+                      </time>
+                    </li>
+                    <li class="gem-c-document-list__attribute">
+                      Guidance
+                    </li>       
+                  </ul>-->                    
+                </li>
+                <li class="gem-c-document-list__item">          
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="employers-get-started">Get started with the recruitment APIs</a>
+                </li>
+                <li class="gem-c-document-list__item">          
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/collections/disability-confident-campaign">Disability confident employer scheme</a>
+                </li>
+              </ul>
+              <h2 class="govuk-heading-m">Providers</h2>
+              <p class="govuk-body">
+                Information for training providers on how to create and manage apprenticeship vacancies, along with guidance on using our recruitment APIs. 
+              </p>
+              <p class="govuk-body">
+                Our recruitment APIs may be useful if you want to create vacancies using your existing systems or display vacancies from Find an apprenticeship on your websites.
+              </p>
+              <ul class="gem-c-document-list">
+                <li class="gem-c-document-list__item">
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="creating-an-apprenticeship-vacancy">Creating an apprenticeship vacancy</a>               
+                </li>
+                <li class="gem-c-document-list__item">          
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="providers-get-started">Get started with the recruitment APIs</a>
+                </li>
+              </ul>
+              <h2 class="govuk-heading-m">Recruitment APIs</h2>
+              <p class="govuk-body">
+                How to access the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API and API documentation</a> for users without an apprenticeship service account.
+              </p> 
+              <ul class="gem-c-document-list">
+                <li class="gem-c-document-list__item">
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="get-started">Get started</a>
+                </li>
+              </ul>                            
+              <h2 class="govuk-heading-m">Legacy tools</h2>
+              <p class="govuk-body">
+                These legacy tools will no longer be available from March 2022 and our new recruitment APIs should be used instead.
+              </p>
+              <ul class="gem-c-document-list">
+                <li class="gem-c-document-list__item">
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/publications/apprenticeship-vacancies-rss-feeds">Recruit an apprentice: RSS feeds</a>               
+                </li>
+                <li class="gem-c-document-list__item">          
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/publications/av-live-how-to-set-up-and-use">Av live: how to set up and use</a>
+                </li>
+              </ul>
+              <ul class="gem-c-pagination__list" data-module="gem-track-click">
+                <li class="gem-c-pagination__item gem-c-pagination__item--next">
+                  <a href="/how-to-vote/voting-and-coronavirus" class="govuk-link gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/how-to-vote/voting-and-coronavirus" data-track-dimension="next" data-track-dimension-index="29">
+                    <span class="gem-c-pagination__link-title">
+                      <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
+                        <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
+                      </svg>
+                      <span class="gem-c-pagination__link-text">Next</span>
+                    </span>
+                    <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                    <!--<span class="gem-c-pagination__link-label">Label</span>-->
+                  </a>
+                </li>
                 </ul>
-
-                <div class="info-notice">
-                <p>You cannot vote online in any elections.</p>
-                </div>
-
-                 <h2 class="govuk-heading-m">Eligibility to vote</h2>
-
-                  <p>You can vote when you’re:</p>
-
-                  <ul class="govuk-list govuk-list--bullet">
-                  <li>18 years old in England and Northern Ireland</li>
-                  <li>16 years old in Scottish Parliament and local elections (and other elections when you’re 18)</li>
-                  <li>16 years old in Welsh Parliament elections (and other elections when you’re 18)</li>
-                  </ul>
-
-
-                  <h2 class="govuk-heading-m">Elections you can vote in  </h2>
-                  <p><a href="#">Different elections have different rules</a> on who can vote. </p>
-
-                  <ul class="gem-c-pagination__list" data-module="gem-track-click">
-                        <li class="gem-c-pagination__item gem-c-pagination__item--next">
-                          <a href="/how-to-vote/voting-and-coronavirus" class="govuk-link gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/how-to-vote/voting-and-coronavirus" data-track-dimension="next" data-track-dimension-index="29">
-                            <span class="gem-c-pagination__link-title">
-                              <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
-                                <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
-                              </svg>
-                              <span class="gem-c-pagination__link-text">Next</span>
-                            </span>
-                              <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                              <span class="gem-c-pagination__link-label">Voting and coronavirus (COVID-19)</span>
-                          </a>
-                        </li>
-                    </ul>
                   <!--
                     <div class="pagination">
                     <p class="govuk-heading-s"><a href="#" class="pagination-link">Next</a></p>
                     <p class="govuk-body-s pagination-subtitle-link"><a href="#">Voting and coronavirus (COVID-19)</a></p>
                     </div>
                   -->
-                </div>
+              </div>
 
       <div class="govuk-grid-column-one-third">
         <div class="related-navigation">
           <h2 class="govuk-heading-s">Related content</h2>
-
           <ul class="govuk-list related-links">
-            <li class="govuk-body-s"><a href="#">Register to vote</a></li>
-            <li class="govuk-body-s"><a href="#">The electoral register and the 'open register'</a></li>
-            <li class="govuk-body-s"><a href="#">Types of election, referendums, and who can vote</a></li>
-            <li class="govuk-body-s"><a href="#">Proxy voting application forms</a></li>
-            <li class="govuk-body-s"><a href="#">Apply for a postal vote</a></li>
-            </ul>
+            <li class="govuk-body-s"><a href="#">List item 1</a></li>
+            <li class="govuk-body-s"><a href="#">List item 2</a></li>
+          </ul>
       </div>
-
     </div>
-
   </main>
 </div>
-
-
-
-
-
-    </div>
-  </div>
-
 {% endblock %}
