Added contents overview to  collection start page

--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -63,21 +63,18 @@
 
                 </li>
             </ol>
-          </nav>
+          </nav>-->
           
-          <p class="govuk-body-s">Contents</p>
-              <ol class="govuk-list govuk-body-s contents">
-                <li>&mdash; Overview</li>
-                <li>&mdash; <a href="#">Voting and coronavirus (COVID-19)</a></li>
-                <li>&mdash; <a href="#">Voting in person</a></li>
-                <li>&mdash; <a href="#">Voting by post</a></li>
-                <li>&mdash; <a href="#">Voting by proxy</a></li>
-                <li>&mdash; <a href="#">Voting from abroad</a></li>
-                </ol>-->
-          </div>
-          
-          <div class="govuk-grid-column-one-third">
-          </div>
+          <ol class="govuk-list govuk-body-s contents">
+            <li id="contents">Contents</li>
+            <li>&mdash; <a href="#employers" class="govuk-link govuk-link--no-visited-state">Employers</a></li>
+            <li>&mdash; <a href="#providers" class="govuk-link govuk-link--no-visited-state">Providers</a></li>
+            <li>&mdash; <a href="#recruitment-apis" class="govuk-link govuk-link--no-visited-state">Recruitment APIs</a></li>
+            <li>&mdash; <a href="#legacy-tools" class="govuk-link govuk-link--no-visited-state">Legacy tools</a></li>                
+          </ol>
+        </div>          
+        <div class="govuk-grid-column-one-third">
+        </div>
       </div>
 
       <div class="govuk-grid-row">
@@ -86,7 +83,7 @@
               <p class="govuk-body">
                 Recruit an apprentice is the official government service for posting and managing apprenticeship adverts. Candidates can view and apply for apprenticeships on <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
               </p>
-              <h2 class="govuk-heading-m govuk-!-margin-top-9">Employers</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="employers">Employers</h2>
               <p class="govuk-body">
                 Information for employers on how to create and manage apprenticeship adverts, along with guidance on using our recruitment APIs. 
                 <br><br>
@@ -113,7 +110,7 @@
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/collections/disability-confident-campaign">Disability confident employer scheme</a>
                 </li>
               </ul>
-              <h2 class="govuk-heading-m govuk-!-margin-top-9">Providers</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="providers">Providers</h2>
               <p class="govuk-body">
                 Information for training providers on how to create and manage apprenticeship vacancies, along with guidance on using our recruitment APIs. 
               </p>
@@ -128,7 +125,7 @@
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="providers-get-started">Get started with the recruitment APIs</a>
                 </li>
               </ul>
-              <h2 class="govuk-heading-m govuk-!-margin-top-9">Recruitment APIs</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="recruitment-apis">Recruitment APIs</h2>
               <p class="govuk-body">
                 How to access the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API and API documentation</a> for users without an apprenticeship service account.
               </p> 
@@ -137,7 +134,7 @@
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="get-started">Get started</a>
                 </li>
               </ul>                            
-              <h2 class="govuk-heading-m govuk-!-margin-top-9">Legacy tools</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="legacy-tools">Legacy tools</h2>
               <p class="govuk-body">
                 These legacy tools will no longer be available from March 2022 and our new recruitment APIs should be used instead.
               </p>
