--- a/app/views/v3/employer/api/api-list.html
+++ b/app/views/v3/employer/api/api-list.html
@@ -24,35 +24,35 @@ API list - Manage apprenticeships - GOV.UK
       </thead>      
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell" id="recruitment-api-live" name="api-name">
+          <td class="govuk-table__cell" id="recruitment-api" name="apiName">
             Recruitment API
             <span class="govuk-caption-m">Create an advert on Find an apprenticeship using your existing systems.</span>
           </td>          
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <a href="api-hub?apiName=recruitment-api" class="govuk-link govuk-link--no-visited-state">
               Get key
             </a>    
           </td>
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell" id="recruitment-api-sandbox" name="api-name">
+          <td class="govuk-table__cell" id="recruitment-api-sandbox" name="apiName">
             Recruitment API (Sandbox)
             <span class="govuk-caption-m">Test creating an advert on Find an apprenticeship using your existing systems.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <a href="api-hub?apiName=recruitment-api-sandbox" class="govuk-link govuk-link--no-visited-state">
               View key
             </a>  
           </td>
         </tr>
       
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell" id="display-adverts-api" name="api-name">
+          <td class="govuk-table__cell" id="display-adverts-api" name="apiName">
             Display adverts API
             <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <a href="api-hub?apiName=display-adverts-api" class="govuk-link govuk-link--no-visited-state">
               View key
             </a>  
           </td>
