--- a/app/views/v3/employer/api/api.html
+++ b/app/views/v3/employer/api/api.html
@@ -15,36 +15,30 @@ Get started with the recruitment APIs - Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started with the recruitment APIs</h1>
-      <p class="govuk-body">
-        Integrating with our Recruitment API may be useful if you want to create adverts using your existing systems. It will allow you to publish to <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
-        <br><br>
-        The Display adverts API allows you to display adverts from Find an Apprenticeship on any website.
-      </p>
-      <h2 class="govuk-heading-l">What does an API do?</h2> 
+      <h2 class="govuk-heading-l">What do our APIs do?</h2> 
       <p class="govuk-body">
         APIs (Application Programming Interfaces) let applications share information and data with each other.
         <br><br>
-        If you connect using the Recruitment API, you can use your own systems to publish to <a href="https://www.findapprenticeship.service.gov.uk/apprenticeshipsearch" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
-        <br><br>
-        You can also use the Display adverts API to display adverts from Find an Apprenticeship on any website.
+        We have two APIs you can use:
       </p>
-      <h2 class="govuk-heading-l">How do I use the API?</h2> 
+      <ul class="govuk-list govuk-list--bullet">
+        <li><strong>Recruitment API</strong> &ndash; our Recruitment API allows you to create adverts on Find an apprenticeship using your own systems.</li>
+        <li><strong>Display adverts API</strong> &ndash; our Display adverts API allows you to display adverts from Find an apprenticeship on your own websites.</li>
+      </ul>
+      <h2 class="govuk-heading-l">How do I use APIs?</h2> 
       <div class="govuk-inset-text">
-        You'll need someone with technical knowledge to connect your software program with the API, for example a software developer.
+        You'll need someone with technical knowledge to connect your system with the API, for example a software developer.
       </div>
       <p class="govuk-body">
-        You can share the <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your software program with the API, they can access the API from there.             
-      </p>
-      <p class="govuk-body">
-        It can take a while to connect using an API, so leave enough time to integrate it.
-      </p>
-      <h2 class="govuk-heading-l">How do I access the API?</h2>
-      <p class="govuk-body">
-        If you have owner permissions you can access the <a href="api-list" class="govuk-link govuk-link--no-visited-state">API keys</a>. 
+        You can share this <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there.             
         <br><br>
-        Your developer will be able to try out the API using the sandbox provided.
+        You will need to give your developer API keys. The keys give your developer permission to connect to the API on your behalf.
         <br><br>
-        You will need to <a href="api-list" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> and <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state"> the developer get started page</a> so they can use the APIs.
+        Your developer will be also able to try out the API using the sandbox provided.
+      </p>
+      <h2 class="govuk-heading-l">How do I access the API Key?</h2>
+      <p class="govuk-body">
+        If you have owner permissions you will be able to access the <a href="api-list" class="govuk-link govuk-link--no-visited-state">API keys</a>. 
       </p>
   </div>
 </div>
