--- a/app/views/v3/employer/api/api.html
+++ b/app/views/v3/employer/api/api.html
@@ -25,7 +25,7 @@ Get started with the recruitment APIs - Manage apprentices
         <li><strong>Recruitment API</strong> &ndash; our Recruitment API allows you to create adverts on Find an apprenticeship using your own systems.</li>
         <li><strong>Display adverts API</strong> &ndash; our Display adverts API allows you to display adverts from Find an apprenticeship on your own websites.</li>
       </ul>
-      <h2 class="govuk-heading-l">How do I use APIs?</h2> 
+      <h2 class="govuk-heading-l">How do I use the APIs?</h2> 
       <div class="govuk-inset-text">
         You'll need someone with technical knowledge to connect your system with the API, for example a software developer.
       </div>
