Get started in-service screens - content updated plus API key page and Dev portal account created backl ink removed in version 2 and 3

--- a/app/views/v3/employer/api/api.html
+++ b/app/views/v3/employer/api/api.html
@@ -36,9 +36,9 @@ Get started with the recruitment APIs - Manage apprentices
         <br><br>
         Your developer will be also able to try out the API using the sandbox provided.
       </p>
-      <h2 class="govuk-heading-l">How do I access the API Key?</h2>
+      <h2 class="govuk-heading-l">Where do I access the API Key?</h2>
       <p class="govuk-body">
-        If you have owner permissions you will be able to access the <a href="api-list" class="govuk-link govuk-link--no-visited-state">API keys</a>. 
+        If you have owner permissions you will be able to access the <a href="api-list" class="govuk-link govuk-link--no-visited-state">API keys here</a>. 
       </p>
   </div>
 </div>
