--- a/app/views/v2/guidance/registered.html
+++ b/app/views/v2/guidance/registered.html
@@ -6,13 +6,6 @@
 Account created - Apprenticeship services - GOV.UK
 {% endblock %}
 
-{% block beforeContent %}
-{{ govukBackLink({
-  text: "Back",
-  href: "javascript: window.history.go(-1)"
-}) }}
-{% endblock %}
-
 {% block content %}
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
@@ -23,7 +16,7 @@ Account created - Apprenticeship services - GOV.UK
 		
 		{{ govukButton({
 			text: "Access API key",
-			href: "display-adverts-api-key"
+			href: "login"
 		}) }}
 
 	</div>
