--- a/app/views/v3/employer/api/api-hub.html
+++ b/app/views/v3/employer/api/api-hub.html
@@ -19,183 +19,56 @@ Key for API - Manage apprenticeships - GOV.UK
     }) }}-->
         <h1 class="govuk-heading-xl">Key for API</h1>
           <p class="govuk-body">
-            You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
+            The API key gives your developer permission to connect to the API on your behalf.
           </p>
-          <div class="app-summary-card ">
+          <h2 class="govuk-heading-l">
+          <!--<div class="app-summary-card ">
             <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">
+              <h3 class="app-summary-card--title">-->
                 {% if data['apiName'] == "recruitment-api" %}
-                Recruitment API
+                  Recruitment API
                 {% elseif data['apiName'] == "recruitment-api-sandbox" %}
-                Recruitment API (Sandbox)
+                  Recruitment API (Sandbox)
                 {% else %}
-                Display Adverts API
+                  Display Adverts API
                 {% endif %}
-              </h3>
-              <div class="app-summary-card__actions">
-
-              </div>
-            </header>
-            <div class="app-summary-card--content">
+              </h2>
               <p class="govuk-body">
-                Create an advert on Find an apprenticeship using your existing systems.<br>
-                <!--Copy the API key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">the link to the API page</a> to your developer.-->
-
-                You'll need to send the API key and the <a href="#" class="govuk-link">API page</a> to your developer. You can do this by copying the information below and pasting it into an email.<br><br>             
-
-                <!--<a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">Copy<span class="govuk-visually-hidden"> key</span></a><br><br>-->
-
-                <code style="color:darkgreen;">99cfbdeb64f14277ac33d4dd06640ede<br> https://developer.apprenticeships.education.gov.uk/recruitment-api-documentation</code>
-
-                
+                {% if data['apiName'] == "recruitment-api" %}
+                  Create an advert on Find an apprenticeship using your existing systems. 
+                {% elseif data['apiName'] == "recruitment-api-sandbox" %}
+                  Test creating an advert on Find an apprenticeship using your existing systems. 
+                {% else %}
+                  Display recruitment adverts from Find an apprenticeship. 
+                {% endif %}                
+                You'll need to send the API key and the API page to your developer. You can do this by copying the information below and pasting it into an email.<br><br>             
               </p>
-              <dl class="govuk-summary-list govuk-summary-list__m">
-                <!--<div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    API key
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <code style="color:darkred; font-size:14px;">99cfbdeb64f14277ac33d4dd06640ede</code>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">     
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Developer link
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">https://manage-apprenticeships.gov.uk/</a>
-                    https://manage-apprenticeships.gov.uk/
-                  </dd>
-                  <dd class="govuk-summary-list__actions">     
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>           
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Key name
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    recruitment-api-live
-                  </dd>
-                  <dd class="govuk-summary-list__value">                
-                  </dd>
-                </div>-->
-              </dl>
-
-              <details class="govuk-details" data-module="govuk-details">
+              <div class="app-summary-card ">
+                <header class="app-summary-card--header">                  
+                    {% if data['apiName'] == "recruitment-api" %}
+                      <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-documentation</code>
+                    {% elseif data['apiName'] == "recruitment-api-sandbox" %}
+                      <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-sandbox-documentation</code>
+                    {% else %}
+                      <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/display-adverts-api-documentation</code>
+                    {% endif %}
+                    
+                    </code>
+                </header>
+              </div>
+              <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
                 <summary class="govuk-details__summary">
                   <span class="govuk-details__summary-text">
                     Do you need a new API key?
                   </span>
                 </summary>
                 <div class="govuk-details__text">
-                  Reasons you might want to renew your key include security issues, a change in your systems or change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
+                  Reasons you might want to renew your API key include – security concerns, a change in your systems or a change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
                 </div>
               </details>
             </div>
           </div>
-          <!--<div class="app-summary-card ">
-            <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Recruitment API (Sandbox)</h3>
-              <div class="app-summary-card__actions">
-              </div>
-            </header>
-            <div class="app-summary-card--content">
-              <p class="govuk-body">
-                Test creating an advert on any website and Find an apprenticeship.<br>
-                Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
-              </p>
-              <dl class="govuk-summary-list govuk-summary-list__m">
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    API key
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <code style="color:darkred; font-size:14px;">79cfbdeb64f14277ac33d4dd06640dfg</code>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>            
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Key name
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    recruitment-api-sandbox
-                  </dd>
-                  <dd class="govuk-summary-list__value">                
-                  </dd>
-                </div>
-              </dl>
-              <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                  <span class="govuk-details__summary-text">
-                    Do you need a new key?
-                  </span>
-                </summary>
-                <div class="govuk-details__text">
-                  <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renewing the key</a> will disable the previous key and will stop your API from working until you use the new key.
-                </div>
-              </details>
-            </div>
-          </div>
-          <div class="app-summary-card ">
-            <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Display Advert API (Live)</h3>
-              <div class="app-summary-card__actions">
-              </div>
-            </header>
-            <div class="app-summary-card--content">
-              <p class="govuk-body">
-                Display recruitment adverts from Find an apprenticeship.<br>
-                Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
-              </p>
-              <dl class="govuk-summary-list govuk-summary-list__m">
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    API key
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <code style="color:darkred; font-size:14px;">32cfbdeb64f14277ac33d4dd06640ilj</code>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>            
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Key name
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    display-advert-api
-                  </dd>
-                  <dd class="govuk-summary-list__actions"></dd>
-                </div>
-              </dl>
-              <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                  <span class="govuk-details__summary-text">
-                    Do you need a new key?
-                  </span>
-                </summary>
-                <div class="govuk-details__text">
-                  <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renewing the key</a> will disable the previous key and will stop your API from working until you use the new key.
-                </div>
-              </details>
-            </div>
-          </div>-->
+         
        </div>
     </div>
   </div>
