Updated home page content

--- a/app/views/v3/_summary.html
+++ b/app/views/v3/_summary.html
@@ -19,8 +19,8 @@
         </thead>
         <tbody class='govuk-table__body'>
           <tr class='govuk-table__row'>
-            <td class='govuk-table__cell'>Iterating on our initial designs for the new API</td>
-            <td class='govuk-table__cell'>User research will give us insights with which to improve the journey</td>
+            <td class='govuk-table__cell'>Iterating on our designs for the new API hub</td>
+            <td class='govuk-table__cell'>Iterations based on user research will enable us to optimise the journeys</td>
           </tr>
         </tbody>
       </table>"
@@ -29,7 +29,9 @@
       <h3 class="govuk-heading-m">EPIC: Recruitment APIs</h3>
         <ul class="govuk-list govuk-list--bullet">  
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Design tickets (in Trello)</h4> 
-          <li><a href="https://trello.com/c/8LLac9QT" class="govuk-link govuk-link--no-visited-state">#127 - Gov.uk guidance pages</a></li>                                             
+          <li><a href="https://trello.com/c/LDdjtrSX" class="govuk-link govuk-link--no-visited-state">#131 - V3 - Changes to key page for Prov and Emp</a></li>
+          <li><a href="https://trello.com/c/GzVnwzIl" class="govuk-link govuk-link--no-visited-state">#132 - V3 - Changes to emp/prov get started pages in service</a></li>
+          <li><a href="https://trello.com/c/8LLac9QT" class="govuk-link govuk-link--no-visited-state">#127 - Gov.uk guidance pages</a></li>                                          
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Design artefacts</h4>                            
           <li><a href="https://miro.com/app/board/o9J_lqGAI0o=/" class="govuk-link govuk-link--no-visited-state">Design board (Miro)</a></li>
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Copy docs</h4>
@@ -38,17 +40,11 @@
             <li><a href="v3/employer/login" class="govuk-link govuk-link--no-visited-state">Employer service (starts at Sign in)</a></li>
             <li><a href="v3/provider/login" class="govuk-link govuk-link--no-visited-state">Provider service (starts at Sign in)</a></li>
             <li><a href="v3/guidance/get-started" class="govuk-link govuk-link--no-visited-state">Dev portal</a></li>
-            <li>GOV.UK guidance pages</li>
-            <ul class="govuk-list govuk-list--bullet">
-              <li><a href="v3/guidance/creating-an-apprenticeship-advert" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Creating an apprenticeship advert</a></li>    
-              <li><a href="v3/guidance/creating-an-apprenticeship-vacancy" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Creating an apprenticeship vacancy</a></li> 
-              <li><a href="v3/guidance/employers-get-started" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Get started for employers</a></li>               
-              <li><a href="v3/guidance/providers-get-started" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Get started for providers</a></li>                             
-            </ul>
+            <li><a href="v3/guidance/collection-home" class="govuk-link govuk-link--no-visited-state">GOV.UK guidance - Recruitment collection page</a></li>    
             <li>Emails</li>
             <ul class="govuk-list govuk-list--bullet">
-              <li><a href="v3/guidance/dev-to-user-email" class="govuk-link govuk-link--no-visited-state">Developer email</a></li>    
-              <li><a href="v3/guidance/promo-email" class="govuk-link govuk-link--no-visited-state">Promotional email</a></li> 
+              <li><a href="v3/guidance/promo-email" class="govuk-link govuk-link--no-visited-state">Promotional email</a></li>
+              <li><a href="v3/guidance/dev-to-user-email" class="govuk-link govuk-link--no-visited-state">Developer email</a></li>              
         </ul>
   </div>
 </div>
