--- a/app/views/v3/guidance/email.html
+++ b/app/views/v3/guidance/email.html
@@ -14,15 +14,17 @@ GOV.UK Prototype kit
           <p class="govuk-body">
             Dear Sarah Philips,
             <br><br>
-            You’ve received this email because you’ve requested to create an account to access the API key.
+            You’ve received this email because you’ve requested to create an account on the Apprenticeship Service Developer Portal.
             <br><br>
-            Please click on the link to <a href="registered" class="govuk-link govuk-link--no-visited-state">create your account</a>.
+            Please click on the link below to create your account.
             <br><br>
-            Kind regards,
+            <a href="registered" class="govuk-link govuk-link--no-visited-state">https://developer.apprenticeships.education.gov.uk/account-created/fdsfrfef68899ewfkewf5999g9g99t9</a>.
             <br><br>
-            Apprenticeship Service
+            From
+            <br><br>
+            The Apprenticeship Service
             <br><br>          
-            This is an automated message. Please don't reply to this email.            
+            This is an automated message &mdash; do not reply.            
           </p>
         </div>
 <!--</main>  -->
