v3 employers - added code snipper and button to the page, removed link if user is viewing the key or has renewed the key

--- a/app/views/v3/employer/api/api-hub.html
+++ b/app/views/v3/employer/api/api-hub.html
@@ -35,25 +35,23 @@ Key for API - Manage apprenticeships - GOV.UK
               </h2>
               <p class="govuk-body">
                 {% if data['apiName'] == "recruitment-api" %}
-                  Create an advert on Find an apprenticeship using your existing systems. 
+                  Create an advert on Find an apprenticeship using your existing systems. You'll need to send the API key and the API page to your developer. You can do this by copying the information below and pasting it into an email.
                 {% elseif data['apiName'] == "recruitment-api-sandbox" %}
-                  Test creating an advert on Find an apprenticeship using your existing systems. 
+                  Test creating an advert on Find an apprenticeship using your existing systems. You'll need to send the API key to your developer. You can do this by copying the key below and pasting it into an email.
                 {% else %}
-                  Display recruitment adverts from Find an apprenticeship. 
+                  Display recruitment adverts from Find an apprenticeship. You'll need to send the API key to your developer. You can do this by copying the key below and pasting it into an email.
                 {% endif %}                
-                You'll need to send the API key and the API page to your developer. You can do this by copying the information below and pasting it into an email.<br><br>             
+                <br><br>             
               </p>
               <div class="app-summary-card ">
                 <header class="app-summary-card--header" data-module="app-copy">
                     {% if data['apiName'] == "recruitment-api" %}
                       <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-documentation</code>
                     {% elseif data['apiName'] == "recruitment-api-sandbox" %}
-                      <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-sandbox-documentation</code>
+                      <code style="color:darkgreen; font-size:16px;">67tuhjkfki4kfkei4kfjj7iboto6908l</code>
                     {% else %}
-                      <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/display-adverts-api-documentation</code>
-                    {% endif %}
-                    
-                    </code>
+                      <code style="color:darkgreen; font-size:16px;">34dkhjrjvjiojfivjoidjfem33435mfm</code>
+                    {% endif %}                    
                 </header>
               </div>
               <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
