--- a/app/views/v3/employer/create/title.html
+++ b/app/views/v3/employer/create/title.html
@@ -1,4 +1,4 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "ma-layout.html" %}
 
 {% block pageTitle %}
 Manage apprentices
@@ -7,7 +7,7 @@ Manage apprentices
 {% block beforeContent %}
 {{super()}}
 {% if data.journey != "new" %}
-<a href="{%if data.edit != "yes" %}create-vacancy{%else%}../vacancy-preview?edit=no{%endif%}" class="govuk-back-link">Back</a>
+<a href="{% if data.edit != 'yes' %}create-vacancy{%else%}../vacancy-preview?edit=no{%endif%}" class="govuk-back-link">Back</a>
 {% endif %}
 {% endblock %}
 
@@ -26,7 +26,7 @@ Manage apprentices
       <div class="govuk-character-count" data-module="character-count" data-maxlength="100">
         <div class="govuk-form-group govuk-!-margin-bottom-8">
           <span class="govuk-hint">You must include the word ‘apprentice’ or ‘apprenticeship’ </span>
-          <input class="govuk-input govuk-!-width-three-quarters js-character-count" id="title" name="title" type="text" value="{% if data.title and data.edit == "yes" %}{{data.title}}{%endif%}">
+          <input class="govuk-input govuk-!-width-three-quarters js-character-count" id="title" name="title" type="text" value="{% if data.title and data.edit == 'yes' %}{{data.title}}{%endif%}">
         </div>
       </div>
 
