--- a/app/views/v3/provider/api/api-list.html
+++ b/app/views/v3/provider/api/api-list.html
@@ -24,62 +24,41 @@ API list - Apprenticeships - GOV.UK
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell" id="recruitment-api-live">
+          <td class="govuk-table__cell" id="recruitment-api" name="apiName">
             Recruitment API
             <span class="govuk-caption-m">Create an advert on Find an apprenticeship using your existing systems.</span>
           </td>          
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <a href="api-hub?apiName=recruitment-api" class="govuk-link govuk-link--no-visited-state">
               Get key
             </a>    
           </td>
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell" id="recruitment-api-sandbox">
+          <td class="govuk-table__cell" id="recruitment-api-sandbox" name="apiName">
             Recruitment API (Sandbox)
             <span class="govuk-caption-m">Test creating an advert on Find an apprenticeship using your existing systems.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <a href="api-hub?apiName=recruitment-api-sandbox" class="govuk-link govuk-link--no-visited-state">
               View key
             </a>  
           </td>
         </tr>
       
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell" id="display-adverts-api">
+          <td class="govuk-table__cell" id="display-adverts-api" name="apiName">
             Display adverts API
             <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <a href="api-hub?apiName=display-adverts-api" class="govuk-link govuk-link--no-visited-state">
               View key
             </a>  
           </td>
         </tr>
       </tbody>
-    </table>  
-    <!--<p class="govuk-body" id="recruitment-api-live">
-        <a href="api-subscribe?api=recruitment-api" class="govuk-link govuk-link--no-visited-state">Recruitment API (Live)</a>
-      </p>
-      <ul class="govuk-list govuk-list-bullet">
-        <li></li>
-        <li></li>
-      </ul>
-      <p class="govuk-body" id="recruitment-api-sandbox">
-        <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API (Sandbox)</a>
-      </p>
-      <ul class="govuk-list govuk-list-bullet">
-        <li></li>
-        <li></li>
-      </ul>
-      <p class="govuk-body" id="display-adverts-api">
-        <a href="display-adverts-api-key" class="govuk-link govuk-link--no-visited-state">Display adverts API (Live)</a>
-      </p>
-      <ul class="govuk-list govuk-list-bullet">
-        <li></li>
-        <li></li>
-      </ul>-->
+    </table>
   </div>
 </div>
 {% endblock %}
