v3 employers - added code snippet to all relevant pages in employers

--- a/app/views/v3/employer/api/api-hub-new-key.html
+++ b/app/views/v3/employer/api/api-hub-new-key.html
@@ -41,7 +41,7 @@ Key for API - Manage apprenticeships - GOV.UK
                 <br><br>             
               </p>
               <div class="app-summary-card ">
-                <header class="app-summary-card--header">                  
+                <header class="app-summary-card--header" data-module="app-copy">        
                     {% if data['apiName'] == "recruitment-api" %}
                       <code style="color:darkgreen; font-size:16px;">33emdoflthy86klgh45obnvbnghderm8</code>
                     {% elseif data['apiName'] == "recruitment-api-sandbox" %}
